Fix: scrollbar in diplay

--- a/client/src/Components/DisplayCards/DisplayCards.css
+++ b/client/src/Components/DisplayCards/DisplayCards.css
@@ -3,6 +3,26 @@
     width: 100%;
     height: 100%;
     align-items: center;
-    justify-content: space-evenly;
-    overflow: hidden;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow-y: scroll;
+}
+
+.display::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+.display::-webkit-scrollbar-thumb {
+    background: var(--primary);
+    border-radius: 4px;
+}
+
+.display::-webkit-scrollbar-thumb:hover {
+    background: #b3b3b3;
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.display::-webkit-scrollbar-thumb:active {
+    background: var(--primary);
 }
