--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -13,7 +13,7 @@
 .cities {
     padding: 10px;
     width: 90%;
-    height: 320px;
+    height: 350px;
 }
 
 .searchCtn {
